# sub-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  railway.json
src/: consumer.rs  custom_tracing.rs  main.rs
src/db/: primary_op.rs
src/models/: user.rs
