[package]
name = "pub-sub-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.5.0"
futures-executor = "0.3.31"
futures-util = "0.3.31"
postgres = "0.19.9"
postgres-types = "0.2.8"
anyhow = "1.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
